; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/adfs/extr_super.c_adfs_discsize.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/adfs/extr_super.c_adfs_discsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adfs_discrecord = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.adfs_discrecord*, i32)* @adfs_discsize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @adfs_discsize(%struct.adfs_discrecord* %0, i32 %1) #0 {
  %3 = alloca %struct.adfs_discrecord*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.adfs_discrecord* %0, %struct.adfs_discrecord** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.adfs_discrecord*, %struct.adfs_discrecord** %3, align 8
  %7 = getelementptr inbounds %struct.adfs_discrecord, %struct.adfs_discrecord* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @le32_to_cpu(i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = sub nsw i32 32, %10
  %12 = shl i32 %9, %11
  %13 = sext i32 %12 to i64
  store i64 %13, i64* %5, align 8
  %14 = load %struct.adfs_discrecord*, %struct.adfs_discrecord** %3, align 8
  %15 = getelementptr inbounds %struct.adfs_discrecord, %struct.adfs_discrecord* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @le32_to_cpu(i32 %16)
  %18 = load i32, i32* %4, align 4
  %19 = ashr i32 %17, %18
  %20 = sext i32 %19 to i64
  %21 = load i64, i64* %5, align 8
  %22 = or i64 %21, %20
  store i64 %22, i64* %5, align 8
  %23 = load i64, i64* %5, align 8
  ret i64 %23
}

declare dso_local i32 @le32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
